atualização de estilos desafio 12

--- a/desafios/d012-aula/style/style.css
+++ b/desafios/d012-aula/style/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +16,7 @@
 html, body {
     min-height: 100vh;
     background-color:darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -18,6 +27,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p {
     padding-bottom: 50px;
@@ -37,7 +48,8 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
-
+    font-family: var(--fonte3);
+    font-size: 1.5em;
 }
 
 section.normal {
@@ -50,8 +62,9 @@ section.imagem {
     color: white;
 }
 section.imagem > p {
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.253);
-    width: 400px;
+    padding: 5px;
 }
 
 footer {
