finalização do desafio 12

--- a/desafios/d012-aula/style/style.css
+++ b/desafios/d012-aula/style/style.css
@@ -52,6 +52,10 @@ section {
     font-size: 1.3em;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -59,12 +63,25 @@ section.normal {
 
 section.imagem {
     background-color: transparent;
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
+    box-shadow: inset 6px 6px 13px 0 #00000079;
 }
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: #0000005e;
     padding: 5px;
+    text-shadow: 1px 1px 0 #000000d5;
+}
+
+section#img01 {
+    background-image: url(../images/background001.jpg);
+    background-position: center center;
+}
+section#img02 {
+    background-image: url(../images/background002.jpg);
+    background-position: right center;
 }
 
 footer {
